maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:18: error: ':' expected but ',' found.
def dirMinimale(x,y):Direction {
                 ^ShortestPathMaze:86: error: identifier expected but '}' found.
}
^